--- a/estilo.css
+++ b/estilo.css
@@ -16,6 +16,7 @@ img{
 }
 .contenido__texto--titulo{
     margin-bottom: 24px;
+    font-size: 20px;
 }
 .button{
     font-family: 'Space Mono', monospace;
@@ -30,9 +31,7 @@ img{
     cursor: pointer;
     font-weight: bold;
 }
-.contenido__texto--titulo{
-    font-size: 20px;
-}
+
 @media screen and (min-width: 920px) {
     body{
         display: flex;
@@ -49,13 +48,22 @@ img{
         display: flex;
         flex-direction: row;
         position: relative;
+        left: 150px;
     }
    .contenido__texto{
        margin-top: 20%;
    }
    .boton{
-       margin-top: 5%;
+       margin-top: -1%;
        display: flex;
        margin-right: 400px;
    }
+   h1{
+     width: 400px;
+     font-size: 40px;  
+   }
+   .texto{
+       width: 300px;
+   }
 }
+
